# agentic-rag

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.py  docker-compose.yaml  expander.py  generator.py  main.py  pyproject.toml  rag_with_reranker.py  rag_with_reranker_actual.py  requirements.txt  verifier.py
blobconnector/: __init__.py  azure_blob_api.py  main.py  processor.py
document_pipeline/: __init__.py  embedder.py  indexer.py  main.py
gdrive/: __init__.py  file_tracker.py  main.py  processor.py
runners/: __init__.py  run_blobconnector.py  run_gdrive.py  run_spconnector.py
spconnector/: __init__.py  file_tracker.py  main.py  sharepoint_watcher.py
src/agentic_rag/: __init__.py
src/agentic_rag/application/: __init__.py  rag_pipeline.py
src/agentic_rag/application/agents/: __init__.py  expander.py  verifier.py
src/agentic_rag/domain/: __init__.py  exceptions.py  state.py  utils.py
src/agentic_rag/domain/prompts/: expander_prompts.yaml
src/agentic_rag/infrastructure/: __init__.py
src/agentic_rag/infrastructure/api/: __init__.py  main.py
src/agentic_rag/infrastructure/connectors/: __init__.py
src/agentic_rag/infrastructure/connectors/blob/: __init__.py  azure_blob_watcher.py  file_tracker.py  main.py  processor.py
src/agentic_rag/infrastructure/connectors/gdrive/: __init__.py  drive_api.py  (+3 more)
src/agentic_rag/infrastructure/llm/: __init__.py  generator.py
src/agentic_rag/infrastructure/persistence/: __init__.py  embedder.py  indexer.py
tests/: __init__.py  conftest.py  test.py  test_verifier.py  verifier.py
(+4 files in other folders)
