[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "0.6.0"
description = "Agentic RAG - Advanced Retrieval-Augmented Generation System"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["agentic_rag"]

[tool.setuptools.package-dir]
"" = "src"

